# qtd

./: CMakeLists.txt  LICENSE.GPL  Makefile  README.md  changelog.txt
cmake/: FindD.cmake
common/: qnativepointer.h
cpp/qt_core/: QLineF_shell.cpp  QLine_shell.cpp  QMetaObject_shell.cpp  QMetaType_shell.cpp  QModelIndex_shell.cpp  QPointF_shell.cpp  QPoint_shell.cpp  QRectF_shell.cpp  QRect_shell.cpp  QSizeF_shell.cpp  QSize_shell.cpp  QString_shell.cpp  QVariant_shell.cpp  QVariant_shell.h
cpp/qt_gui/: UrlHandler_shell.cpp  UrlHandler_shell.h  UrlHandler_shell_moc.cpp
cpp/qt_qtd/: ArrayOpsPrimitive_shell.cpp  qtd_core.cpp
d2/qt/: QGlobal.d
d2/qt/core/: QLine.d  QList.d  QMetaObject.d  QMetaType.d  QModelIndex.d  QPoint.d  QRect.d  QRectF.d  QSize.d  QString.d  QTypeInfo.d  QVariant.d
d2/qt/core/test/: Objects.d
d2/qt/opengl/: glu.d
d2/qtd/: Array.d  ArrayOpsPrimitive.d  Atomic.d  Attribute.d  Core.d  Debug.d  MOC.d  Marshal.d  Meta.d  MetaMarshall.d  QMetaTypeImpl.d  QtdObject.d  Signal.d  Str.d  String.d  Traits.d
d2/qtd/ctfe/: Integer.d
d2/qtd/meta/: Compiletime.d  Runtime.d
demos/browser/: TODO.txt  autosaver.d  bookmarks.d  browserapplication.d  browsermainwindow.d  build  chasewidget.d  cookiejar.d  downloadmanager.d  edittableview.d  edittreeview.d  history.d  main.d  modelmenu.d  networkaccessmanager.d  searchlineedit.d  settings.d  squeezelabel.d  tabwidget.d  toolbarsearch.d  ui_downloaditem.d  urllineedit.d  webview.d  xbel.d
demos/deform/: main.d  pathdeform.d
demos/interview/: CMakeLists.txt  build  build.bat  main.d  model.d  model_d1.d  model_d2.d
demos/shared/: arthurstyle.d  arthurwidgets.d  hoverpoints.d
examples/: CMakeLists.txt
examples/desktop/screenshot/: build  screenshot.d
examples/desktop/systray/: CMakeLists.txt  build  build.bat  build.sh  main.d  window.d
examples/dialogs/: CMakeLists.txt
examples/dialogs/classwizard/: CMakeLists.txt  build.bat  classwizard.d  classwizard_d1.d  main.d
examples/dialogs/standarddialogs/: CMakeLists.txt  dialog.d  dialog_d1.d  main.d
examples/dialogs/trivialwizard/: trivialwizard.d
examples/draganddrop/dropsite/: CMakeLists.txt  build  droparea.d  dropsitewindow.d  dropsitewindow_d1.d  main.d
examples/itemviews/: CMakeLists.txt
examples/itemviews/customsortfiltermodel/: CMakeLists.txt  build.sh  mysortfilterproxymodel.d  window.d
examples/itemviews/dirview/: build  main.d
examples/itemviews/editabletreemodel/: CMakeLists.txt  build.sh
examples/layouts/: CMakeLists.txt
examples/layouts/basiclayouts/: CMakeLists.txt  dialog.d
examples/layouts/borderlayout/: CMakeLists.txt  borderlayout.d  borderlayout_d1.d  main.d  window.d
examples/layouts/dynamiclayouts/: CMakeLists.txt  build  build.bat  build.sh  dialog.d  main.d
examples/mainwindows/: CMakeLists.txt
examples/mainwindows/dockwidgets/: CMakeLists.txt  build  build.bat  main.d  mainwindow.d
examples/mainwindows/sdi/: CMakeLists.txt  mainwindow.d
examples/opengl/hellogl/: CMakeLists.txt  build  glwidget.d  glwidget_d1.d  main.d  window.d
examples/qwt/simpleplot/: build.sh  simple.d
examples/tutorials/: CMakeLists.txt
examples/tutorials/addressbook/part1/: CMakeLists.txt
examples/tutorials/tutorial/t1/: build  main.d
examples/tutorials/tutorial/t2/: main.d
examples/tutorials/tutorial/t3/: build.sh  main.d
examples/tutorials/tutorial/t4/: main.d
examples/tutorials/tutorial/t5/: main.d
examples/widgets/analogclock/: AnalogClock.d  CMakeLists.txt  build  build.sh  main.d
examples/widgets/calculator/: CMakeLists.txt  build  button.d  calculator.d  calculator_d1.d  main.d
generator/: CMakeLists.txt  abstractmetabuilder.cpp  abstractmetalang.cpp  abstractmetalang.h  build_all.txt  containergenerator.cpp  containergenerator.h  cppgenerator.cpp  cppgenerator.h  cppheadergenerator.cpp  cppimplgenerator.cpp  cppimplgenerator.h  dgenerator.cpp  dgenerator.h  fileout.h  gen  generator.cpp  generator.h  generator.pro  generatorsetd.cpp  jumptable.cpp  main.cpp  main.h  metainfogenerator.cpp  prigenerator.cpp  prigenerator.h  qtjambi_masterinclude.h  typesystem.cpp  typesystem.h  typesystem_core-java.java  typesystem_core-java.xml  typesystem_core.xml  typesystem_gui-java.java  typesystem_gui-java.xml  typesystem_gui.xml  typesystem_network-common.xml  typesystem_network-java.java  typesystem_network-java.xml  typesystem_network.xml  typesystem_opengl-java.xml  (+11 more)
generator/parser/: ast.cpp  ast.h  binder.cpp  binder.h  class_compiler.cpp  class_compiler.h  codemodel.cpp  codemodel.h  codemodel_finder.cpp  codemodel_finder.h  codemodel_fwd.h  codemodel_pointer.h  compiler_utils.cpp  compiler_utils.h  control.cpp  control.h  declarator_compiler.cpp  declarator_compiler.h  default_visitor.cpp  default_visitor.h  dumptree.cpp  dumptree.h  lexer.cpp  lexer.h  list.cpp  list.h  name_compiler.cpp  name_compiler.h  parser.cpp  parser.h  rpp-allocator.h  rxx_allocator.h  smallobject.cpp  smallobject.h  symbol.h  tokens.cpp  tokens.h  type_compiler.cpp  type_compiler.h  visitor.cpp  (+1 more)
generator/parser/include/: stdarg.h
generator/parser/rpp/: builtin-macros.cpp  pp-cctype.h  pp-engine-bits.h  pp-engine.h  pp-environment.h  pp-fwd.h  pp-internal.h  pp-iterator.h  pp-macro-expander.h  pp-macro.h  pp-main.cpp  pp-scanner.h  pp-string.h  pp-symbol.h  pp.h  preprocessor.cpp  preprocessor.h
include/: ArrayOpsPrimitive.h  QObjectEntity.h  qtd_core.h
mini/test1/: build  build.bat  main.d
qt/: CMakeLists.txt  QDefines.d  QGlobal.d  QGlobal.d.inc  Signal.d
qt/core/: QList.d  QMetaObject.d  QMetaType.d  QPoint.d  QRect.d  QSize.d  QString.d  QTypeInfo.d  QVariant.d
qt/d1/: Signal.d
qt/d1/qt/: QtDObject.d  QtdObject.d  Signal.d
qt/d2/: Signal.d
qt/d2/qt/: QtDObject.d  QtdObject.d  Signal.d
qt/gui/: UrlHandler.d
qt/qtd/: ArrayOpsPrimitive.d  Atomic.d  MOC.d  Meta.d  MetaMarshall.d  Str.d
tools/drcc/: main.cpp  rcc.cpp  rcc.pro
tools/duic/: CMakeLists.txt
tools/duic/d/: dwritedeclaration.cpp  dwriteincludes.cpp  dwriteinitialization.cpp
tools/duic/tests/: mainwindow.ui  ui_mainwindow.d
(+17 files in other folders)
